--- a/treemap_demo.html
+++ b/treemap_demo.html
@@ -3059,7 +3059,8 @@
     
   </head>
   <body>
-    <div id="chart_div" style="width: 100%; height: 100%;"></div>
+    <div><h2> Housing NZ tree map</h2></div>
+    <div id="chart_div" style="width: 90%; height: 90%;"></div>
 
   </body>
 </html>
