--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <h3><a href="http://moonbrandy.github.io/Housing-NZ/treemap_demo"> Tree map demo for Housing NZ</a></h3>
       <h5>Tree map for Housing NZ </h5>
       <p>In this demo tree map, the sapce for each square stand for the total cost in the area or property and the colour is representing the age of the property (mock-up data). </br> 
-      The tree map is seperated into three levels, from low to high they are: property level, block level, census area level. 
+      The tree map is seperated into three levels, from low to high they are: property level, block level, census area level. </br>
+      Instruction: use left click to zoom in, and right click to zoom out. 
       </p>
     </div>
   </body>
