--- a/treemap_demo.html
+++ b/treemap_demo.html
@@ -3031,6 +3031,8 @@
 
         ]);
 		
+		data.sort({column: 2, desc: true});
+		
 		
 		var options = {
 		useWeightedAverageForAggregation: false,
@@ -3055,18 +3057,29 @@
 
         function showFullTooltip(row, size, value) {
 		var topf = '';
+			var j = 0;
+			var top = false;
         	for (var i = 0; i < data.getNumberOfRows(); i++) {
+				
         		if (data.getValue(i, 1) == data.getValue(row, 0)) {
-                    topf += data.getValue(i, 0) +  ' Cost:' + data.getValue(i, 2).toFixed(2).toString() + ' Remaining Life:' + data.getValue(i, 3).toString() + '<br>'
-                };     		
+					j++
+					top = true;
+					if (j < 6) {
+						topf += data.getValue(i, 0) +  ' Cost:$' + data.getValue(i, 2).toLocaleString('en-IN') + ' Age:' + Math.round(data.getValue(i, 3)) + '<br>'
+					};
+				};     		
+			
         	};
-    return '<div style="background:#fd9; padding:10px; border-style:solid">' +
-           '<span style="font-family:Courier"><b>' + data.getValue(row, 0) +
-           '</b>, '  + '</span><br>' +
-     data.getColumnLabel(2) + '(total): $' + size.toLocaleString('en-IN') + '<br>' +
-     data.getColumnLabel(3) + '(median): ' + Math.round(data.getValue(row, 3)) + 'years old <br>'  + 
-	 topf + '<br>' +  '</div>';
-  }
+			if (top){
+				topf = 'Top 5 mostly cost: ' + '<br>' + topf;
+			};
+		return '<div style="background:#fd9; padding:10px; border-style:solid">' +
+			'<span style="font-family:Courier"><b>' + data.getValue(row, 0) +
+			'</b>, '  + '</span><br>' +
+			 data.getColumnLabel(2) + '(total): $' + size.toLocaleString('en-IN') + '<br>' +
+			 data.getColumnLabel(3) + '(median): ' + Math.round(data.getValue(row, 3)) + 'years old <br>'  + 
+			 topf + '<br>' +  '</div>';
+		}
 
       }
 	  
